# discord-bot-rs

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: main.yml
data/: README.ron  dummy_igdb.ron  dummy_info.ron  dummy_owa_info.ron
dbschema/: Dev.esdl  Discord.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql  00012.edgeql  00013.edgeql  00014.edgeql  00015.edgeql  00016.edgeql  00017.edgeql  00018.edgeql  00019.edgeql  00020.edgeql  00021.edgeql
src/: main.rs  roller.rs
src/buckets/: account.rs  fun.rs  helpers.rs  mod.rs  stocks.rs  utilities.rs
src/constants/: constants.rs
src/datastructs/: bot_info.rs  embed_data.rs  mod.rs  owa_data.rs  sanitized_message.rs
src/handlers/: default.rs  mod.rs  pluggable.rs  pluggable_fns.rs
src/handlers/plugins/: mod.rs  tea_time_plugin.rs
src/handlers/plugins/traits/: mod.rs  t_plugin.rs
src/persistence/: edge.rs  edge_models.rs  mem.rs  mod.rs
src/plugins/: fn_links_mover.rs  fn_message_announcer.rs  fn_tea_time.rs  join_message.rs  mod.rs  sticky_plugin.rs  tea_time.rs  weather.rs
src/plugins/scheduled/: mod.rs  release_announcer.rs  tea_time.rs
src/user_data/: UserData.rs  mod.rs
src/utils/: apis.rs  bot_info.rs  bot_reply.rs  mod.rs  remoteCalls.rs  sanitized_message.rs  shortcuts.rs  stock_utils.rs  urls.rs
src/utils/logging/: mod.rs
