[package]
name = "discord_bot_rs"
version = "1.8.5"
authors = ["Oscuro87"]
edition = "2021"

[dependencies]
# Serenity Framework
serenity = "0.11.7"

# Common crates
ron = "0.8.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8.5"
regex = "1.10.2"
chrono = "0.4.31"
chrono-tz = { version = "0.8.4", features = ["serde"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.22"
lazy_static = "1.4.0"
anyhow = "1.0.75"
dotenv = "0.15.0"

# Edge DB
edgedb-tokio = "0.5.0"
edgedb-derive = "0.5.1"
edgedb-protocol = "0.6.0"

# Custom libraries
owm-rs = { version = "1.0.14", features = ["utils"] }
